# mxc_v4l2_capture

./: CMakeLists.txt  build.sh  mxc_v4l2_capture.c
